# trello-cli-powerup

./: .claudeignore  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-24-card-back-collapse.md  2026-04-24-powerup-icons.md
docs/superpowers/specs/: 2026-04-24-card-back-collapse-design.md  2026-04-24-powerup-icons-design.md
powerup/: README.md  client.js  index.html  plan.html  plan.js  policies.html  policies.js  settings.html  settings.js  styles.css  vercel.json  version.js
tests/: test_client.py  test_custom_fields.py  test_init_agent_fields.py  test_plugin_data.py  test_resolve.py
trello_cli/: __main__.py  cli.py  client.py  config.py  resolve.py
trello_cli/commands/: agent_guide.py  auth.py  board.py  card.py  checklist.py  list_cmd.py  plan.py
