[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trello-cli"
version = "0.1.0"
description = "Lightweight Trello CLI for driving boards from Claude Code sessions."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "oferkoren" }]
dependencies = [
    "click>=8.1",
    "requests>=2.31",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "requests-mock>=1.11",
]

[project.scripts]
trello = "trello_cli.cli:main"

[tool.setuptools.packages.find]
include = ["trello_cli*"]
exclude = ["tests*"]
